--- a/tools/license-generator.html
+++ b/tools/license-generator.html
@@ -169,9 +169,9 @@
             for (let i = 0; i < str.length; i++) {
                 const char = str.charCodeAt(i);
                 hash = ((hash << 5) - hash) + char;
-                hash = hash & hash;
+                hash = hash | 0; // Force 32-bit signed integer (same as PHP)
             }
-            return Math.abs(hash).toString(16).toUpperCase();
+            return Math.abs(hash).toString(16).toUpperCase().padStart(8, '0');
         }
 
         function encodeBase64(str) {
@@ -209,7 +209,7 @@
 
             // Create verification hash
             const dataString = `${shopName}|${expiryStr}|${machineId}|${SECRET_KEY}`;
-            const checksum = simpleHash(dataString).substring(0, 8);
+            const checksum = simpleHash(dataString);
 
             // Encode license
             const licensePayload = JSON.stringify(licenseData);
